tarea2: Parte final de la tarea con index.html APARTADO 5

--- a/Tarea LMSGI02/css/estilos2.css
+++ b/Tarea LMSGI02/css/estilos2.css
@@ -1,4 +1,4 @@
-/* estilos.css */
+/* estilos.css para formulario.html */
 
 /* Asegurar que el body y html ocupen todo el alto de la ventana para el footer fijo */
 html, body {
